fix(toggle): z-index focus du bouton

--- a/packages/toggle/src/styles/_module.scss
+++ b/packages/toggle/src/styles/_module.scss
@@ -57,6 +57,7 @@
       ~ .#{$prefix}-toggle__label::after {
         transform: translateX(space(2w));
         text-indent: 0;
+        @include z-index(focus);
       }
     }
 
